scrollbar fix mew

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,18 @@ hr {
   margin: 0.9rem 3rem;
   border-top: #00214d 3px dashed;
 }
-
+::-webkit-scrollbar{
+  width: 5px ;
+  height: 5px;
+}
+::-webkit-scrollbar-track{
+  
+  background:#f2f4f6;
+}
+::-webkit-scrollbar-thumb{
+  border-radius: 5px;
+  background: #1890ff;
+}
 .code-box-demo {
   text-align: center;
 }
